Prevent project title from wrapping

--- a/web-ng/src/app/components/project-header/project-header.component.css
+++ b/web-ng/src/app/components/project-header/project-header.component.css
@@ -16,6 +16,7 @@
 
 .header {
   padding: 16px;
+  white-space: nowrap;
 }
 
 .header div, img, .header span, mat-icon {
